Re:ゼロから始める

--- a/DirectXGameClassed.vcxproj
+++ b/DirectXGameClassed.vcxproj
@@ -102,40 +102,17 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     </FxCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Core\DirectX12\BlendMode.cpp" />
-    <ClCompile Include="Core\DirectX12\DepthStencil.cpp" />
-    <ClCompile Include="Core\DirectX12\DescriptorRange.cpp" />
-    <ClCompile Include="Core\DirectX12\DirectXCommon.cpp" />
-    <ClCompile Include="Core\DirectX12\DirectXCommonHelper.cpp" />
-    <ClCompile Include="Core\DirectX12\InputLayout.cpp" />
-    <ClCompile Include="Core\DirectX12\PipelineState.cpp" />
-    <ClCompile Include="Core\DirectX12\RasterizerState.cpp" />
-    <ClCompile Include="Core\DirectX12\RootParameters.cpp" />
-    <ClCompile Include="Core\DirectX12\RootSignature.cpp" />
-    <ClCompile Include="Core\DirectX12\Dxc.cpp" />
-    <ClCompile Include="Core\DirectX12\StaticSamplers.cpp" />
+    <ClCompile Include="Core\DirectX12\DirectX12.cpp" />
     <ClCompile Include="Core\Win32\Win32Application.cpp" />
+    <ClCompile Include="Input\Input.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Utility\ConvertString.cpp" />
     <ClCompile Include="Utility\Logger.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BaseConfiguratorForComPtr.h" />
-    <ClInclude Include="Core\DirectX12\BaseConfigurator.h" />
-    <ClInclude Include="Core\DirectX12\BaseConfiguratorForEnum.h" />
-    <ClInclude Include="Core\DirectX12\BlendMode.h" />
-    <ClInclude Include="Core\DirectX12\DepthStencil.h" />
-    <ClInclude Include="Core\DirectX12\DescriptorRange.h" />
-    <ClInclude Include="Core\DirectX12\DirectXCommon.h" />
-    <ClInclude Include="Core\DirectX12\DirectXCommonHelper.h" />
-    <ClInclude Include="Core\DirectX12\InputLayout.h" />
-    <ClInclude Include="Core\DirectX12\PipelineState.h" />
-    <ClInclude Include="Core\DirectX12\RasterizerState.h" />
-    <ClInclude Include="Core\DirectX12\RootParameters.h" />
-    <ClInclude Include="Core\DirectX12\RootSignature.h" />
-    <ClInclude Include="Core\DirectX12\Dxc.h" />
-    <ClInclude Include="Core\DirectX12\StaticSamplers.h" />
+    <ClInclude Include="Core\DirectX12\DirectX12.h" />
     <ClInclude Include="Core\Win32\Win32Application.h" />
+    <ClInclude Include="Input\Input.h" />
     <ClInclude Include="structs.h" />
     <ClInclude Include="Utility\ConvertString.h" />
     <ClInclude Include="Utility\Logger.h" />
