--- a/DirectXGameClassed.vcxproj.filters
+++ b/DirectXGameClassed.vcxproj.filters
@@ -31,6 +31,9 @@
     <Filter Include="Externals\ImGui">
       <UniqueIdentifier>{4e0e1071-96e2-47d3-94bc-1cfffb313b95}</UniqueIdentifier>
     </Filter>
+    <Filter Include="DirectX12\FPS">
+      <UniqueIdentifier>{88cff5bd-cd25-4ccd-9324-62389d1650c2}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -80,6 +83,9 @@
     </ClCompile>
     <ClCompile Include="Externals\imgui\imgui_widgets.cpp">
       <Filter>Externals\ImGui</Filter>
+    </ClCompile>
+    <ClCompile Include="Core\DirectX12\Framerate.cpp">
+      <Filter>DirectX12\FPS</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -133,6 +139,9 @@
     </ClInclude>
     <ClInclude Include="Externals\imgui\imstb_truetype.h">
       <Filter>Externals\ImGui</Filter>
+    </ClInclude>
+    <ClInclude Include="Core\DirectX12\Framerate.h">
+      <Filter>DirectX12\FPS</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
