--- a/DirectXGameClassed.vcxproj.filters
+++ b/DirectXGameClassed.vcxproj.filters
@@ -34,6 +34,9 @@
     <Filter Include="DirectX12\FPS">
       <UniqueIdentifier>{88cff5bd-cd25-4ccd-9324-62389d1650c2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Externals\Timer">
+      <UniqueIdentifier>{eadfca40-62e7-4a72-b41e-3818d23dafb1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -86,6 +89,9 @@
     </ClCompile>
     <ClCompile Include="Core\DirectX12\Framerate.cpp">
       <Filter>DirectX12\FPS</Filter>
+    </ClCompile>
+    <ClCompile Include="Externals\Timer\Timer.cpp">
+      <Filter>Externals\Timer</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -142,6 +148,9 @@
     </ClInclude>
     <ClInclude Include="Core\DirectX12\Framerate.h">
       <Filter>DirectX12\FPS</Filter>
+    </ClInclude>
+    <ClInclude Include="Externals\Timer\Timer.h">
+      <Filter>Externals\Timer</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
