Object3dとObject3dSystemの追加と初期化処理の実装
DirectXGameClassed.vcxprojにObject3dとObject3dSystemのソースファイルとヘッダーファイルをコンパイルおよびインクルード対象として追加しました。また、DirectXGameClassed.vcxproj.filtersにFeature\Object3dフィルターを追加し、そのフィルターに関連ファイルを含めました。main.cppにおいて、Object3dSystemとObject3dのインスタンスを作成し、初期化および削除処理を実装しました。Object3d.cppとObject3dSystem.cppに初期化メソッドを追加し、Object3d.hとObject3dSystem.hにクラス定義と初期化メソッドの宣言を行いました。

--- a/DirectXGameClassed.vcxproj
+++ b/DirectXGameClassed.vcxproj
@@ -120,6 +120,8 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Externals\imgui\imgui_widgets.cpp" />
     <ClCompile Include="Externals\Timer\Timer.cpp" />
     <ClCompile Include="Features\Input.cpp" />
+    <ClCompile Include="Features\Object3d\Object3d.cpp" />
+    <ClCompile Include="Features\Object3d\Object3dSystem.cpp" />
     <ClCompile Include="Features\Sprite\Sprite.cpp" />
     <ClCompile Include="Features\Sprite\SpriteSystem.cpp" />
     <ClCompile Include="main.cpp" />
@@ -150,6 +152,8 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Externals\imgui\imstb_truetype.h" />
     <ClInclude Include="Externals\Timer\Timer.h" />
     <ClInclude Include="Features\Input.h" />
+    <ClInclude Include="Features\Object3d\Object3d.h" />
+    <ClInclude Include="Features\Object3d\Object3dSystem.h" />
     <ClInclude Include="Features\Sprite\Sprite.h" />
     <ClInclude Include="Features\Sprite\SpriteSystem.h" />
     <ClInclude Include="Math\MathExtension\mathExtension.h" />
