--- a/DirectXGameClassed.vcxproj.filters
+++ b/DirectXGameClassed.vcxproj.filters
@@ -49,6 +49,9 @@
     <Filter Include="DirectX12\TextureManager">
       <UniqueIdentifier>{b645dc65-bf36-43cb-90e8-e823724f366b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Feature\Object3d">
+      <UniqueIdentifier>{e1b1b091-2477-475f-b508-9b6faaf83efc}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -135,6 +138,12 @@
     <ClCompile Include="Core\DirectX12\TextureManager.cpp">
       <Filter>DirectX12\TextureManager</Filter>
     </ClCompile>
+    <ClCompile Include="Features\Object3d\Object3dSystem.cpp">
+      <Filter>Feature\Object3d</Filter>
+    </ClCompile>
+    <ClCompile Include="Features\Object3d\Object3d.cpp">
+      <Filter>Feature\Object3d</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="structs.h">
@@ -220,6 +229,12 @@
     </ClInclude>
     <ClInclude Include="Core\DirectX12\TextureManager.h">
       <Filter>DirectX12\TextureManager</Filter>
+    </ClInclude>
+    <ClInclude Include="Features\Object3d\Object3dSystem.h">
+      <Filter>Feature\Object3d</Filter>
+    </ClInclude>
+    <ClInclude Include="Features\Object3d\Object3d.h">
+      <Filter>Feature\Object3d</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
